--- a/src/App.css
+++ b/src/App.css
@@ -401,7 +401,7 @@ h6 {
   background: var(--darkGrey);
   text-transform: capitalize;
   padding: 0.5rem 0;
-  text-align: center;
+  text-align: left;
   font-weight: 700;
   letter-spacing: var(--mainSpacing);
 }
@@ -409,7 +409,7 @@ h6 {
 /* single room*/
 
 .single-room {
-  padding: 5rem 0 0 0;
+  padding: 0.2rem 0 0 0;
 }
 .single-room-images {
   width: 80vw;
@@ -429,6 +429,9 @@ h6 {
   grid-template-columns: 1fr;
   margin: 2rem auto;
 }
+
+.single-room-info p {text-align: left;}
+
 .desc,
 .info {
   margin: 1rem 0;
