--- a/src/App.css
+++ b/src/App.css
@@ -400,7 +400,7 @@ h6 {
 .room-info {
   background: var(--darkGrey);
   text-transform: capitalize;
-  padding: 0.5rem 0;
+  padding: 0.5rem 0.5rem;
   text-align: left;
   font-weight: 700;
   letter-spacing: var(--mainSpacing);
